# Five-Nights-At-RTF

./: .gitignore  README.md  algem_ai.py  audio_mix.py  camera_graph.py  gameplay.py  gameplay_model.py  gameplay_presenter.py  gameplay_view.py  gameplay_view.py_head  main.py  menu_assets.py  menu_audio.py  menu_presenter.py  menu_view.py  model.py  presenter.py  pyproject.toml  requirements.txt  save.json  save.py  screamer.py  screen_capture.py  settings.json  settings.py  spatial_audio.py  test_ad_demo.py  test_glitch_demo.py  test_screamer_flow.py  view.py
config/: laptop_projection.default.json
fnar/: __init__.py
fnar/gameplay/: __init__.py  ai_domain.py  algem_ai.py  camera_graph.py  camera_renderer.py  gameplay_audio.py  glitch_controller.py  hack_logs.py  input_controller.py  laptop_controller.py  laptop_projection.py  laptop_renderer.py  model.py  office_renderer.py  pathfinding.py  presenter.py  screamer.py  tablet_controller.py  ui_hitboxes.py  vent_audio_controller.py  vent_seal.py  view.py  view_assets.py
fnar/menu/: __init__.py  assets.py  audio.py  effects.py  model.py  presenter.py  (+1 more)
tests/: conftest.py  demo_algem_audio.py  demo_vent_audio_reactions.py  demo_vent_seal_flow.py  test_ad_realtime.py  test_algem_ai.py  test_algem_routes.py  test_algem_talk_integration.py  test_algem_talk_sound.py  test_audio_mix.py  test_cameras.py  test_final_scene.py  test_gameplay_model.py  test_glitch.py  test_laptop_power_fx.py  test_screamer.py  test_screamer_flow.py  test_screamer_keys.py  test_vent_seal_flow.py
tools/: find_duct_centers.py  gen_vent_map.py
(+30 files in other folders)
